--- a/DhruviSoapSide/appsettings.Development.json
+++ b/DhruviSoapSide/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DhruviSoapSideContext": "Server=(localdb)\\mssqllocaldb;Database=DhruviSoapSideContext-057661a8-45f2-4f9c-9501-539defe1afb9;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,6 @@
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
